Use getFirst() to access the first message instead of getAt(0) in GrpcServerServiceTest